# niconico-download

./: .gitignore  README.md  config.conf  pyproject.toml  yt-dlp.sample.conf
.github/workflows/: build.yaml  formatter.yaml
bundle/: pyinstaller.py
src/devscripts/: install_deps.py  make_lazy_extractors.py  tomlparse.py  update-version.py  utils.py
src/nicodlp/: __init__.py  __main__.py  cookie.py  gui.py  urls.py
