[project]
name = "niconico-download"
version = "0.1.0"
description = "hoge"
authors = [
    { name = "darallium", email = "contact@darallium.com" }
]
dependencies = [
    "yt-dlp",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/niconico"]
