[project]
name = "nicodlp"
version = "0.1.0"
description = "hoge"
authors = [
    { name = "darallium", email = "contact@darallium.com" }
]
dependencies = [
    "yt-dlp",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "customtkinter>=5.2.2",
    "ctkmessagebox>=2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
"mylist" = {chain = ["make:list", "dl:list"]}
"make:list" = { call = "nicodlp.urls:main" }
"dl:list" = { cmd = "yt-dlp -a ./list.txt" }


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nicodlp"]
